--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 }
 
 #box {
-  width: 50px;
-  height: 50px;
-  background-color: red;
+  width: 100px;
+  height: 100px;
+  background-color: rgb(217, 177, 177);
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 100;
+  left: 100;
 }
